--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build; npm run build-storybook",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "format": "eslint ./src --fix",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public -o ./build/storybook"
   },
   "eslintConfig": {
     "extends": [
