--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "highcharts-react-official": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-select-component": "^4.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
